Tue Jul 26 14:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Options.html:
          Small link improvements

Tue Jul 26 12:13:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp (destroy_interceptors):
          Fixed memory leak of client/server request interceptor lists

Tue Jul 26 12:00:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Request_Interceptor_Flow/client.cpp:
        * tests/Portable_Interceptors/Request_Interceptor_Flow/test.idl:
        * tests/Portable_Interceptors/Request_Interceptor_Flow/test_i.{h,cpp}:
          Added a CORBA::ULongSeq as out argument to the server_test
          method to test for bug 2158. It seems this problem doesn't
          exists anymore

Tue Jul 26 11:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp:
          Fixed problem in dynamic hash lookup table generation

Tue Jul 26 10:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1020_Basic_Regression/Server_Task.cpp:
          Added return 0

Tue Jul 26 10:10:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Remote_Object_Proxy_Broker.cpp:
          Fixed compile error in minimum build

Tue Jul 26 09:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PICurrent.{h,cpp}:
        * tao/PICurrent_Loader.cpp:
          Overruled _get_orb and store an ORB_Core reference instead of
          a pointer

Tue Jul 26 09:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/params.h:
          Removed some old comment

Tue Jul 26 08:58:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/ValueBox/client.cpp:
          Added some missing CORBA::string_dup calls which caused this tet
          to fail in a static build

Tue Jul 26 08:51:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
